<?xml version="1.0"?>
<package format="2">
    <name>nrw_demo</name>
    <version>0.0.0</version>
    <description>The nrw_demo package</description>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
