<?xml version="1.0"?>
<package format="2">
    <name>nrw_demo</name>
    <version>0.0.0</version>
    <description>The nrw_demo package</description>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>pr2_controllers_msgs</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>roscpp</depend>
    <depend>ar_track_alvar_msgs</depend>
    <depend>eigen_conversions</depend>

    <exec_depend>roslaunch</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>pr2_gazebo</exec_depend>
    <exec_depend>pr2_teleop</exec_depend>
    <exec_depend>pr2_moveit_config</exec_depend>
</package>
